--- a/ui/src/translations/fr.json
+++ b/ui/src/translations/fr.json
@@ -360,7 +360,7 @@
     },
     "cancel": "Annuler",
     "homeDashboard": {
-      "title": "Tableau de bord",
+      "title": "Vue d'ensemble",
       "today": "Aujourd'hui",
       "yesterday": "Hier",
       "last28Days": "Dernier 28 jours",
@@ -995,6 +995,7 @@
     "flow not imported": "Certains flow n'ont pas pu être importés",
     "flows imported": "Flux importés",
     "is required": "{field} est requis",
-    "bookmark": "Favoris"
+    "bookmark": "Favoris",
+    "dashboards": "Tableaux de bord"
   }
 }
