--- a/ui/src/translations/it.json
+++ b/ui/src/translations/it.json
@@ -360,7 +360,7 @@
     },
     "cancel": "Annulla",
     "homeDashboard": {
-      "title": "Dashboard",
+      "title": "Panoramica",
       "today": "Oggi",
       "yesterday": "Ieri",
       "last28Days": "Ultimi 28 giorni",
@@ -995,6 +995,7 @@
     "flow not imported": "Alcuni flow non possono essere importati",
     "flows imported": "Flussi importati",
     "is required": "{field} è obbligatorio",
-    "bookmark": "Segnalibri"
+    "bookmark": "Segnalibri",
+    "dashboards": "Dashboard"
   }
 }
