--- a/ui/src/translations/pt.json
+++ b/ui/src/translations/pt.json
@@ -360,7 +360,7 @@
     },
     "cancel": "Cancelar",
     "homeDashboard": {
-      "title": "Dashboard",
+      "title": "Visão Geral",
       "today": "Hoje",
       "yesterday": "Ontem",
       "last28Days": "Últimos 28 dias",
@@ -995,6 +995,7 @@
     "flow not imported": "Algum flow não pôde ser importado",
     "flows imported": "Fluxos importados",
     "is required": "{field} é obrigatório",
-    "bookmark": "Favoritos"
+    "bookmark": "Favoritos",
+    "dashboards": "Painéis"
   }
 }
