--- a/ui/src/translations/es.json
+++ b/ui/src/translations/es.json
@@ -995,6 +995,12 @@
     "flows imported": "Flujos importados",
     "is required": "{field} es obligatorio",
     "bookmark": "Marcadores",
-    "dashboards": "Tableros de control"
+    "dashboards": "Tableros de control",
+    "dashboard_label": "Tablero de control",
+    "default_dashboard": "Tablero Predeterminado",
+    "custom_dashboard": "Tablero Personalizado",
+    "create_custom_dashboard": "Crear nuevo dashboard",
+    "edit_custom_dashboard": "Editar Panel de Control",
+    "custom_dashboard_empty": "No hay resultados para mostrar."
   }
 }
