--- a/ui/src/translations/pt.json
+++ b/ui/src/translations/pt.json
@@ -995,6 +995,12 @@
     "flows imported": "Fluxos importados",
     "is required": "{field} é obrigatório",
     "bookmark": "Favoritos",
-    "dashboards": "Painéis"
+    "dashboards": "Painéis",
+    "dashboard_label": "Painel de Controle",
+    "default_dashboard": "Painel Padrão",
+    "custom_dashboard": "Painel Personalizado",
+    "create_custom_dashboard": "Criar novo dashboard",
+    "edit_custom_dashboard": "Editar Dashboard",
+    "custom_dashboard_empty": "Não há resultados para serem exibidos."
   }
 }
